dgraph.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    meta.helm.sh/release-name: ssd
  generation: 1
  labels:
    app: ssd
    app.kubernetes.io/managed-by: Helm
    chart: ssd-2024.10.00
    component: dgraph
    heritage: Helm
    release: ssd
  name: dgraph
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ssd
      component: dgraph
  serviceName: dgraph
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ssd
        component: dgraph
    spec:
      containers:
      - image: quay.io/opsmxpublic/ratel:v21.12.0
        imagePullPolicy: IfNotPresent
        name: ratel
        ports:
        - containerPort: 8000
          name: http-ratel
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - command:
        - bash
        - -c
        - |
          set -ex
          dgraph zero --my=$(hostname -f):5080
        image: quay.io/opsmxpublic/dgraph:v23.1.0
        imagePullPolicy: IfNotPresent
        name: zero
        ports:
        - containerPort: 5080
          name: grpc-zero
          protocol: TCP
        - containerPort: 6080
          name: http-zero
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /dgraph
          name: datadir
      - command:
        - bash
        - -c
        - |
          set -ex
          sleep 180
          if [ "${ENABLE_IMPORT}" == "true" ]; then
            dgraph bulk -f dexport/g01.rdf.gz -g dexport/g01.gql_schema.gz --format=rdf --zero=localhost:5080
            cp -r out/0/p .
          else
            echo "Skipping dgraph data import due to ENABLE_IMPORT variable set to \"false\""
          fi

          dgraph alpha --my=$(hostname -f):7080 --zero dgraph-0.dgraph.${POD_NAMESPACE}.svc.cluster.local:5080 --security "whitelist=0.0.0.0/0"
        image: quay.io/opsmxpublic/dgraph:v23.1.0
        imagePullPolicy: IfNotPresent
        name: alpha
        ports:
        - containerPort: 8080
          name: http-alpha
          protocol: TCP
        - containerPort: 9080
          name: grpc-alpha
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /dgraph
          name: datadir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: datadir
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
      creationTimestamp: null
      name: datadir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      volumeMode: Filesystem
