ssd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-app-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`SSD-DNS-VALUE`)
      kind: Rule
      services:
        - name: ssd-ui 
          port: 8080
